@@ -74,6 +74,7 @@
 			<option value="DE">DE - Deutsch</option>
 			<option value="EN">EN - English</option>
 			<option value="FR">FR - Français</option>
+			<option value="IT">IT - Italiano</option>
 			<option value="RM">RM - Rumantsch</option>
 		</select>
 		<!-- ###LANGUAGES### [end] -->
